--- a/doc/main.tex
+++ b/doc/main.tex
@@ -216,7 +216,7 @@
             \begin{itemize}
                 \item \textbf{Servidor PostgreSQL}:
                 \begin{itemize}
-                    \item \textit{\textbf{postgres-configmap.yaml}}: define las variables necesarias para el servidor de la base de datos PostgreSQL, encargándose de crear una base de datos con el nombre "\textit{database}" y de definir "\textit{as}" como el nombre de usuario por defecto.
+                    \item \textit{\textbf{postgres-configmap.yaml}}: define las variables necesarias para el servidor de la base de datos PostgreSQL, encargándose de crear una base de datos con el nombre “\textit{database}” y de definir “\textit{as}” como el nombre de usuario por defecto.
                     \item \textit{\textbf{postgres-pvc.yaml}}: se encarga de realizar la reclamación de volumen persistente para el servidor de la base de datos.
                     \begin{itemize}
                         \item \textbf{Modo de acceso}: se ha definido como \textit{ReadWriteOnce} para permitir el funcionamiento correcto de PostgreSQL.
